src/test/deca/codegen/valid/SO/whileWithNot.deca
// Description:
//    Test l'operation not et le not equal
//
// Resultats: valide
//    
//
// Historique:
//    cree le 14/01/2022
{
    int x = 4;
    while(!(x!=4)){
        println("valide");
        x = 3;
    }
    if (x==4){
        println("Probleme");
    }
}